--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,6 +28,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
+
 models:
   dbt_airbnb:
+    +materialized: view
+    src:
+      +materialized: ephemeral
+    dim:
+      +materialized: table
