--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -17,6 +17,9 @@ test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
+asset-paths: ["img"]
+
+
 
 clean-targets:         # directories to be removed by `dbt clean`
   - "target"
