--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,6 +35,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_airbnb:
     +materialized: view
+    +post-hook:
+      - "GRANT SELECT ON {{ this }} TO REPORTER"
     src:
       +materialized: ephemeral
     dim:
